app/src/test/resources/programs/valid/loops/loopWithValueInBracketsInBreak.exe
foo main() -> Int = {
    // The value of that expression should be 52
    loop {
        break ((7 + 19) * 2)
    }
}